--- a/css/admin.css
+++ b/css/admin.css
@@ -59,31 +59,25 @@ section {
 }
 
 .product {
-  width: 300px; /* 產品卡片寬度 */
-  margin-top: 10px; /* 上外邊距 */
-  margin-bottom: 20px; /* 下外邊距 */
-  margin-left: 55px; /* 左外邊距 */
-  margin-right: 55px; /* 右外邊距 */
+  width: 200px; /* 產品卡片寬度 */
+  margin: 10px; /* 四周外邊距 */
   background-color: #fff; /* 背景顏色 */
   border-radius: 10px; /* 圓角 */
   overflow: hidden; /* 溢出隱藏 */
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* 陰影效果 */
-  transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out; /* 過渡效果 */
-}
-
-.product:hover {
-  transform: scale(1.05); /* 滑鼠懸停時放大 */
-  box-shadow: 0 0 20px rgba(0, 0, 0, 0.2); /* 滑鼠懸停時陰影增加 */
+  transition: box-shadow 0.3s ease-in-out; /* 過渡效果 */
 }
 
 .product img {
   width: 100%; /* 圖片寬度 */
   height: auto; /* 圖片高度自動 */
+  margin: 0 auto; /* 水平居中 */
+  display: block; /* 圖片以塊狀元素顯示 */
   transition: filter 0.3s ease-in-out; /* 過渡效果 */
 }
 
-.product:hover img {
-  filter: brightness(80%); /* 滑鼠懸停時調整亮度 */
+.out-of-stock img {
+  filter: grayscale(100%);
 }
 
 .product-info {
@@ -91,22 +85,34 @@ section {
   text-align: center; /* 文字置中 */
 }
 
-.out-of-stock {
-  filter: grayscale(100%);
-  pointer-events: none;
-}
-
-.price {
-  font-size: 18px; /* 字體大小 */
-  color: #f97300; /* 產品價格顏色 */
+.inventory-control {
+  display: flex;
+  align-items: center;
+  justify-content: center; /* 水平和垂直居中 */
   margin-top: 10px; /* 上邊距 */
 }
 
-footer {
-  background-color: #7ab2b2; /* 頁腳背景顏色 */
-  color: #eef7ff; /* 文字顏色 */
-  text-align: center; /* 文字居中對齊 */
-  padding: 1rem; /* 內邊距 */
-  width: 100%; /* 寬度 100% */
-  margin-top: auto; /* 確保頁腳在頁面底部 */
+.inventory-control button {
+  margin-left: 10px;
+}
+
+.inventory-control button {
+  margin-left: 10px;
+  padding: 8px 16px; /* 調整按鈕填充 */
+  border: none; /* 移除邊框 */
+  border-radius: 5px; /* 圓角 */
+  background-color: #f97300; /* 按鈕背景顏色 */
+  color: #fff; /* 文字顏色 */
+  cursor: pointer; /* 指針樣式 */
+  transition: background-color 0.3s ease; /* 過渡效果 */
+}
+
+.inventory-control button:hover {
+  background-color: #d46200; /* 按鈕懸停時背景顏色 */
+}
+
+/* admin_income的數字 */
+.big-number {
+  font-size: 2em; /* 調整數字的字體大小 */
+  text-align: center; /* 將數字水平置中 */
 }
